<resources>
    <string name="app_name">Corona is Blind</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corona_is_blind_logo_description">Corona is Blind logo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="learn_more">Learn more…</string>
    <string name="error_required">Required</string>
    <string name="error_password_len">Password must be at least 8 characters</string>
    <string name="signup_title">Sign up for Corona is Blind!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="venmo">Venmo</string>
    <string name="venmo_field_info">Please Venmo $15 to @collegequarantine to help run this experience. Let us know if this cost is a financial burden for you. We will be donating 50% of this cost to provide aid to coronavirus patients and medical workers.</string>
    <string name="gender_hint">I am…</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="looking_for_hint">I am interested in people who are…</string>
    <string name="looking_for_info">This experience does not have to be romantic. Feel free to select all genders if you want to meet people for friends.</string>
    <string name="friend_referral_hint">Friend Referrals</string>
    <string name="friend_referral_info">Do you know if any of your friends would be interested in this experience? If so, add their emails here!</string>
    <string name="approve_hint">All calls this week are going to be between 10–11PM Eastern. By checking this box, I\'m agreeing to this time and will do my best to attend all my calls.</string>
    <string name="approve_info">Missing calls is not fun for anyone. Please be considerate of others and try to make your calls on time!</string>
    <string name="agree">I agree</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_auth_failed">Authentication Failed.</string>
    <string name="error_email_format">Invalid email format.</string>
    <string name="error_password_match">Passwords do not match.</string>
    <string name="error_looking_for_len">Must select at least one.</string>
    <string name="home_title">Home</string>
    <string name="history_title">History</string>
    <string name="matches_title">Matches</string>
    <string name="info_page_title">Info</string>
    <string name="account_page_title">Account</string>
    <string name="welcome_name">Hey, %1s</string>
    <string name="full_name">%1s %2s</string>
    <string name="welcome_season_episode">Welcome to Corona is Blind Season %1d Episode %2d</string>
    <string name="this_week">This Week on Corona is Blind…</string>
    <string name="known_since">Known since: %1s</string>
    <string name="email_reveal">Email: %1s</string>
    <string name="upcoming_calls">Upcoming Calls</string>
    <string name="go">Go!</string>
    <string name="log_out">Log Out</string>
    <string name="previous_calls">Previous Calls</string>
    <string name="review">Review</string>
    <string name="your_matches">Your Matches!</string>
    <string name="done">Done</string>
</resources>
