<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home_title"/>
    <item
        android:id="@+id/page_history"
        android:enabled="true"
        android:icon="@drawable/history_icon"
        android:title="@string/history_title"/>
    <item
        android:id="@+id/page_matches"
        android:enabled="true"
        android:icon="@drawable/matches_icon"
        android:title="@string/matches_title"/>
    <item
        android:id="@+id/page_info"
        android:enabled="true"
        android:icon="@drawable/info_icon"
        android:title="@string/info_page_title"/>
    <item
        android:id="@+id/page_account"
        android:enabled="true"
        android:icon="@drawable/account_icon"
        android:title="@string/account_page_title"/>
</menu>