<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_home"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextSubtitleDashboard"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="21dp"
        android:layout_marginLeft="21dp"
        android:text="@string/welcome_season_episode" />

    <TextView
        style="@style/TextSubSubTitleDashboard"
        android:id="@+id/tvSubSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="21dp"
        android:layout_marginLeft="21dp"
        android:layout_gravity="center"
        android:text="@string/this_week" />

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingBottom="46dp"
        android:background="@drawable/transparent_card_bg"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/TextTitleMainCalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_calls"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcomingCalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>